# docs/swagger.json
@@ -31,9 +31,9 @@
                 }
             }
         },
-        "/incoming": {
-            "get": {
-                "description": "Handles incoming requests for Tspay Subhub",
+        "/incoming/deposit_callback": {
+            "post": {
+                "description": "Handles incoming deposit callback requests from Tspay",
                 "consumes": [
                     "application/json"
                 ],
@@ -43,7 +43,7 @@
                 "tags": [
                     "incoming"
                 ],
-                "summary": "Incoming Handler",
+                "summary": "Deposit Callback Handler",
                 "responses": {
                     "200": {
                         "description": "OK",
